# aarhus-kommune-oai-hackathon

./: .gitignore  .template-env  LICENSE  README.md  extract_data_with_pydantic.py  parse_json.py  pyproject.toml
demo/: gradio_app.py
example_data/: ole.txt
notebooks/: openai_demo1.ipynb
src/llm_extract/: azure_client.py  price.py  pydantic_extraction.py
